--- a/tmp.html
+++ b/tmp.html
@@ -1,78 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+.aotw:hover .aotw__trig {
+    -webkit-animation: blink 51ms linear infinite;
+    -o-animation: blink 51ms linear infinite;
+    animation: blink 51ms linear infinite
+}
 
-    body {
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
+https://www.blimp.gr/
 
-    .content {
-      display: flex;
-      flex: 1;
-    }
-
-    header {
-      display: flex;
-      flex-direction: column;
-      border: 1px solid black;
-    }
-
-    main {
-      flex: 1;
-      display: flex;
-      gap: 1rem;
-      border: 1px solid black;
-    }
-
-    .column {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      border: 1px dashed black;
-    }
-
-    footer {
-      display: flex;
-      border: 1px solid black;
-    }
-
-    /* ===== Responsive (Mobile) Styles ===== */
-    @media (max-width: 768px) {
-      .content {
-        flex-direction: column;
-      }
-
-      header {
-        width: 100%;
-      }
-
-      main {
-        width: 100%;
-        flex: 1;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="content">
-    <header>
-      Navigation
-    </header>
-    <main>
-      <div class="column">Column 1</div>
-      <div class="column">Column 2</div>
-      <div class="column">Column 3</div>
-    </main>
-  </div>
-  <footer>
-    Footer
-  </footer>
-</body>
-</html>
+HEX #2F2F2F
+HEX #B4AC97
+HEX #3c3c3c
